login, logout, signup

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,17 +1,33 @@
 doctype html 
 html(lang="kr")
     head
-        title #{pageTitle} | Mytube
+        title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body
      
         header
             h1=pageTitle 
-            
-        nav 
-            ul 
-                li  
-                    a(href="/") Home
+            nav 
+                ul 
+                    li  
+                        a(href="/") Home
+                    li 
+                        a(href="/search") Search
+                    li  
+                        a(href="/videos/upload") Upload Video 
+                    if loggedIn
+                        li 
+                            a(href="/users/logout") Logout 
+                        li 
+                            a(href="/users/edit") #{loggedInUser.name}'s Profile
+                    else 
+                        li 
+                            a(href="/join") Join
+                        li  
+                            a(href="/login") Login 
+ 
+
+
         main
             block content
                
