--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -13,13 +13,15 @@ html(lang="kr")
                         a(href="/") Home
                     li 
                         a(href="/search") Search
-                    li  
-                        a(href="/videos/upload") Upload Video 
                     if loggedIn
                         li 
                             a(href="/users/logout") Logout 
                         li 
-                            a(href="/users/edit") #{loggedInUser.name}'s Profile
+                            a(href="/users/edit") Edit Profile
+                        li 
+                            a(href=`/users/${loggedInUser._id}`) #{loggedInUser.name}'s Profile
+                        li  
+                            a(href="/videos/upload") Upload Video 
                     else 
                         li 
                             a(href="/join") Join
