--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,7 +3,9 @@ extends base.pug
 block content   
     if errorMessage 
         span=errorMessage
-    form(method="POST")
+    form(method="POST" enctype="multipart/form-data")
+        label(for="video")
+        input(name="video" type="file" id="video" accept="video/*" required)
         input(name="title" placeholder="Title" type="text" maxlength=30 required) 
         input(name="description" placeholder="Description" type="text" minlength=10 required) 
         input(name="hashtags" placeholder="Hashtags separated by comma" type="text" required) 
