--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -3,6 +3,7 @@ html(lang="kr")
     head
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="/assets/css/styles.css")
     body
      
         header
@@ -36,3 +37,4 @@ html(lang="kr")
            
     
     include partials/footer.pug
+    script(src="/assets/js/main.js")
