--- a/src/views/change-password.pug
+++ b/src/views/change-password.pug
@@ -4,7 +4,7 @@ block content
     if errorMessage 
         span=errorMessage
     form(method="POST")
-        input(name="originalPassword" placeholder="Original Password" type="password" required)
+        input(name="currentPassword" placeholder="Current Password" type="password" required)
         input(name="newPassword" placeholder="New Password" type="password" required)
         input(name="newPassword2" placeholder="New Password confirmation" type="password" required)
         input(type="submit" value="Change Password")
