--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,5 +1,75 @@
-@import "./_variables";
+@import "./config/_variables.scss";
+@import "./config/_reset.scss";
+
+//components
+@import "./components/header.scss";
+@import "./components/footer.scss";
+@import "./components/forms.scss";
+@import "./components/shared.scss";
+@import "./components/social-login.scss";
+@import "./components/video.scss";
+@import "./components/video-player.scss";
+
+//screens
+@import "./screens/edit-profile.scss";
+@import "./screens/home.scss";
+@import "./screens/profile.scss";
+@import "./screens/search.scss";
+@import "./screens/upload.scss";
+
+//defaults
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
 body {
-  background-color: aliceblue;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: $bg;
+  color: white;
+  padding-left: 20px;
+}
+@keyframes goAway {
+  from {
+    transform: none;
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+}
+
+main {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.message {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  max-width: 200px;
+  padding: 10px 20px;
+  border-radius: 1000px;
+  text-align: center;
+  animation: goAway 0.5s ease-in-out forwards;
+  animation-delay: 4s;
+  &.error {
+    background-color: tomato;
+    color: white;
+  }
+  &.info {
+    background-color: white;
+    color: black;
+  }
+  &.success {
+    background-color: aliceblue;
+    color: black;
+  }
 }
