--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,40 +1,19 @@
+include mixins/message
 doctype html 
 html(lang="kr")
     head
         title #{pageTitle} | #{siteName}
-        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
         link(rel="stylesheet", href="/assets/css/styles.css")
     body
-     
-        header
-            h1=pageTitle 
-            nav 
-                ul 
-                    li  
-                        a(href="/") Home
-                    li 
-                        a(href="/search") Search
-                    if loggedIn
-                        li 
-                            a(href="/users/logout") Logout 
-                        li 
-                            a(href="/users/edit") Edit Profile
-                        li 
-                            a(href=`/users/${loggedInUser._id}`) #{loggedInUser.name}'s Profile
-                        li  
-                            a(href="/videos/upload") Upload Video 
-                    else 
-                        li 
-                            a(href="/join") Join
-                        li  
-                            a(href="/login") Login 
- 
-
-
+        if messages.error 
+            +message("error",messages.error)
+        if messages.info 
+            +message("info",messages.info)
+        if messages.success 
+            +message("success",messages.success)
+        include partials/header
         main
             block content
-               
-           
-    
-    include partials/footer.pug
-    script(src="/assets/js/main.js")
+    include partials/footer
+    block scripts
