--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -10,5 +10,7 @@ block content
         input(name="password2" type="password" placeholder="Confirm Password" required)
         input(name="name" type="text" placeholder="Name" required)
         input(type="submit" value="Join")
-    hr
-    a(href="/login") Already have an account? &rarr;  
+    include partials/social-login
+        div.auth-switch
+            span Already have an account? 
+            a(href="/login") Log in now &rarr; 
