--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -2,8 +2,16 @@ extends base
 include mixins/video 
 
 block content 
-    each info in user.videos
-        +video(info)
-    else 
-        li Sorry noting found
+    div.profile__data
+        if !loggedInUser.avatarUrl
+            i.fa-solid.fa-face-smile.fa-8x
+            h3=user.name
+        else 
+            img(src="/" + user.avatarUrl).avatar
+            h3=user.name
+    div.video-grid
+        each video in user.videos
+            +video(video)
+        else
+            span.empty__message No videos found 
     
