--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,12 +1,20 @@
 extends base.pug
 
-block content   
-    if errorMessage 
-        span=errorMessage
-    form(method="POST" enctype="multipart/form-data")
-        label(for="video")
-        input(name="video" type="file" id="video" accept="video/*" required)
-        input(name="title" placeholder="Title" type="text" maxlength=30 required) 
-        input(name="description" placeholder="Description" type="text" minlength=10 required) 
-        input(name="hashtags" placeholder="Hashtags separated by comma" type="text" required) 
-        input(type="submit" value="Upload Video")
+block content
+   div.upload__container
+        div.upload__video
+            video#previewVideo
+            button#streamBtn.social__btn Start Recording
+        if errorMessage
+            span=errorMessage
+        form(method="POST", enctype="multipart/form-data")
+            label(for="video") Video File
+            input(type="file", accept="video/*", required, id="video", name="video")
+            label(for="thumb") Thumbnail File
+            input(type="file", accept="image/*", required, id="thumb", name="thumb")
+            input(placeholder="Title", required, type="text", name="title", maxlength=20)
+            input(placeholder="Description", required, type="text", name="description", minlength=10)
+            input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
+            input(type="submit", value="Upload Video")
+block scripts 
+    script(src="/assets/js/recorder.js")
