--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,15 +1,34 @@
 extends base.pug
 
-block content 
-    video(src="/" + video.videoUrl, controls)
-    div 
+block content
+    div#videoContainer(data-id=video._id)
+        video(src="/" + video.videoUrl)
+        div#videoControls.videoControls
+            div.videoControls__play
+                span#play.videoControls__playBtn
+                    i.fas.fa-play
+                div.videoControls__time
+                    span#currentTime 00:00
+                    span  / 
+                    span#totalTime 00:00
+            input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
+            div.videoControls__volume
+                span#mute
+                    i.fas.fa-volume-up
+                input(type="range",step="0.01", value=0.5, min="0", max="1")#volume
+                span#fullScreen
+                    i.fas.fa-expand
+    if String(video.owner._id) === String(loggedInUser._id)
+        a(href=`${video.id}/edit`) Edit video &rarr;
+        br
+        a(href=`${video.id}/delete`) Delete video &rarr;
+block scripts 
+    script(src="/assets/js/videoPlayer.js")
+
+    //- div 
         p=video.description
         small=video.createdAt
         br 
         small Uploaded by 
         a(href=`/users/${video.owner._id}`)=video.owner.name
         hr
-    if String(video.owner._id) === String(loggedInUser._id)
-        a(href=`${video.id}/edit`) Edit video &rarr;
-        br
-        a(href=`${video.id}/delete`) Delete video &rarr;
