--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -1,11 +1,26 @@
 header {
-  padding: 20px 50px;
+  padding: 10px 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0px;
+  z-index: 100;
+  background-color: $bg;
   .header__logo {
     color: $red;
-    font-size: 38px;
+    font-size: 35px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    left: -45px;
+    margin-left: 40px;
+  }
+  .headerTitle {
+    color: whitesmoke;
+    margin-left: 5px;
+    font-size: 25px;
+    font-weight: 500;
   }
   ul {
     display: flex;
@@ -15,17 +30,77 @@ header {
       margin-left: 30px;
       font-size: 14px;
       font-weight: 600;
-      text-transform: uppercase;
     }
     i {
-      font-size: 16px;
+      font-size: 18px;
     }
   }
-  .header__btn {
-    background-color: white;
-    color: $bg;
-    padding: 5px 10px;
+  .headerBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 35px;
+    width: 60px;
     border-radius: 5px;
+    background-color: #272727;
+    font-size: 11px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    bottom: -50px;
+    left: -18px;
+    z-index: 100;
+  }
+  .search-icon {
+    position: relative;
+    &:hover {
+      .headerSearch__box {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+
+  .video-icon {
+    position: relative;
+    &:hover {
+      .headerVideo__box {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+  .logOut-icon {
+    position: relative;
+    &:hover {
+      .headerLogout__box {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+
+  .headerLogin__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 35px;
+    width: 100px;
+    background-color: inherit;
+    border: 2px solid #272727;
+    color: #3da6ff;
+    border-radius: 25px;
+    font-size: 14px;
+    &:hover {
+      background-color: rgba(61, 164, 255, 0.2);
+    }
+    i {
+      font-size: 20px;
+      margin-right: 5px;
+    }
   }
   .header__avatar {
     width: 45px;
