--- a/src/client/scss/components/video.scss
+++ b/src/client/scss/components/video.scss
@@ -1,21 +1,75 @@
-// video mixin
+.homeVideoAvatar {
+  height: 42px;
+  width: 42px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
 .video-mixin {
+  display: flex;
+  flex-direction: column;
   .video-mixin__thumb {
-    height: 140px;
-    border-radius: 7px;
+    height: 170px;
+    border-radius: 10px;
     width: 100%;
     background-color: ivory;
+    margin-bottom: 10px;
+  }
+  .video-mixin__info {
+    display: flex;
   }
   .video-mixin__data {
-    padding: 0px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+
     .video-mixin__title {
-      font-size: 18px;
-      display: block;
-      margin-top: 10px;
+      font-size: 17px;
+      margin-bottom: 6px;
     }
     .video-mixin__meta {
-      margin-top: 5px;
+      margin-top: 3px;
+    }
+    .grey {
+      font-size: 14px;
+      opacity: 0.5;
+    }
+  }
+}
+
+.sideVideo-mixin {
+  display: flex;
+  align-items: flex-start;
+  margin-left: 15px;
+  margin-bottom: 10px;
+  .sideVideo-mixin__thumb {
+    width: 180px;
+    height: 95px;
+    border-radius: 5px;
+    margin-right: 7px;
+  }
+  .sideVideo-mixin__data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 3px;
+    .sideVideo-mixin__title {
+      font-size: 15px;
+      font-weight: 600;
+      margin-bottom: 10px;
+      color: whitesmoke;
+    }
+    .sideVideo-mixin__name {
+      font-size: 13px;
+      margin-bottom: 7px;
+    }
+    .sideVideo-mixin__meta {
       font-size: 12px;
+      text-wrap: nowrap;
+    }
+    .grey {
+      opacity: 0.5;
     }
   }
 }
