--- a/src/client/scss/screens/watch.scss
+++ b/src/client/scss/screens/watch.scss
@@ -1,41 +1,358 @@
-.video__data {
-  margin-top: 20px;
+.main__container {
   display: flex;
-  flex-direction: column;
-  .video__title {
-    font-size: 26px;
-    margin-bottom: 5px;
+  position: relative;
+  left: -30px;
+}
+.video__info {
+  width: 950px;
+  img {
+    height: 47px;
+    width: 47px;
+    border-radius: 50%;
   }
-  .video__createdAt {
-    font-size: 12px;
+  .video__data {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .videoTitle {
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 5px;
   }
   .video__owner {
-    margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    .ownerInfo {
+      margin-left: 9px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-wrap: nowrap;
+      .ownerName {
+        font-size: 17px;
+      }
+      .ownerSubs {
+        font-size: 12px;
+        color: #a1a1a1;
+        margin-top: 5px;
+      }
+    }
+
+    .videoEditBtn,
+    .videoDeleteBtn,
+    .subsBtn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100px;
+      height: 40px;
+      border-radius: 40px;
+      font-size: 13px;
+      font-weight: 600;
+      background-color: #3da6ff;
+      color: black;
+      position: relative;
+      right: -30px;
+      border: none;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.9;
+      }
+    }
+    .videoEditBtn {
+      margin-right: 10px;
+    }
+    .subsBtn {
+      background-color: #f1f1f1;
+    }
+    .subs {
+      width: 120px;
+      background-color: #272727;
+      color: whitesmoke;
+    }
+    #likeContainer {
+      height: 40px;
+      width: 85px;
+      border-radius: 20px;
+      background-color: #272727;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      position: absolute;
+      right: 0px;
+      cursor: pointer;
+      &:hover {
+        background-color: gray;
+      }
+      #likeBtn {
+        font-size: 17px;
+      }
+      #likeCount {
+        margin-left: 10px;
+        font-size: 15px;
+      }
+    }
+  }
+  .video__owner {
+    margin-top: 12px;
+    margin-bottom: 10px;
     font-size: 14px;
-    a {
-      color: cornflowerblue;
-      text-decoration: underline;
+  }
+
+  .video__subInfo {
+    background-color: #272727;
+    width: 98%;
+    padding: 10px;
+    border-radius: 15px;
+    .metaInfo {
+      span {
+        font-size: 14px;
+        font-weight: 600;
+      }
+      .views {
+        margin-right: 7px;
+      }
+      .hashtags {
+        color: darkgray;
+        margin-left: 7px;
+      }
+    }
+    .description {
+      font-size: 15px;
+      margin-top: 7px;
     }
   }
 }
+i {
+  cursor: pointer;
+}
+
 .video__comments {
+  img {
+    height: 47px;
+    width: 47px;
+    border-radius: 50%;
+  }
   display: flex;
   flex-direction: column;
   max-width: 320px;
   width: 100%;
-  margin: 0 auto;
   margin-top: 20px;
-  .video__comment {
+  h2 {
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+  form {
+    border: none;
+    margin-left: 10px;
+    width: 930px;
+    height: 60px;
+    max-width: none;
+    padding: 0px;
+    margin-bottom: 18px;
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 10px;
-    border-radius: 9999px;
-    background-color: white;
-    color: black;
-    margin-bottom: 10px;
+  }
+
+  textarea {
+    padding-bottom: 10px !important;
+    font-size: 14px;
+    text-align: right 5px;
+    height: 0 auto;
+    width: 100%;
+    border: none;
+    background-color: inherit;
+    color: whitesmoke;
+    border-bottom: 2px solid rgb(63, 63, 63);
+    resize: none;
+    outline: none;
+    margin-left: 15px;
+    padding-bottom: 0px;
+    position: relative;
+    top: -5px;
+    overflow: hidden;
+    transition: border-bottom 0.3s ease-in-out;
+    &:focus {
+      border-bottom: 2px solid white;
+
+      // 포커스 상태일 때 #addCommentBtn의 opacity를 1로 변경
+      ~ #addCommentBtn {
+        opacity: 1;
+      }
+    }
+  }
+
+  #addCommentBtn {
+    width: 85px;
+    height: 35px;
+    border-radius: 40px;
+    background-color: #3da6ff;
+    border: none;
+    position: absolute;
+    right: 0px;
+    bottom: -23px;
+    margin-top: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    cursor: pointer;
   }
 }
+
+.video__comment {
+  display: flex;
+  align-items: center;
+  width: 940px;
+  padding: 10px;
+  border-radius: 9999px;
+  background-color: $bg;
+  color: whitesmoke;
+  padding-bottom: 20px;
+  &:hover {
+    .commentOption {
+      opacity: 1;
+    }
+  }
+
+  .editCommentForm {
+    padding: 0px;
+    z-index: 1;
+    width: 890px;
+    position: relative;
+    bottom: -15px;
+    margin-left: 10px;
+    .editCommentArea {
+      position: relative;
+      top: -10px;
+      margin-left: 0px;
+    }
+    button {
+      width: 100%;
+      height: 35px;
+      border-radius: 40px;
+      margin-top: 10px;
+      border: none;
+      position: absolute;
+      bottom: -18px;
+      cursor: pointer;
+    }
+    .saveEditBtn {
+      width: 65px;
+      border-radius: 40px;
+      background-color: #3da6ff;
+      right: 0px;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+    .cancelEditBtn {
+      background-color: $bg;
+      width: 65px;
+
+      border-radius: 40px;
+      color: whitesmoke;
+      right: 70px;
+      &:hover {
+        background-color: gray;
+      }
+    }
+  }
+  .comment__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10px;
+    width: 100%;
+    position: relative;
+    bottom: -15px;
+    .commentUsername {
+      font-weight: 700;
+      margin-bottom: 6px;
+    }
+    .commentText {
+      font-weight: 400;
+      font-size: 14px;
+      word-wrap: break-word;
+      margin-bottom: 10px;
+    }
+    .likeCommentBtn {
+      margin-right: 5px;
+      font-size: 20px;
+    }
+    .likeCommentCount {
+      font-size: 14px;
+    }
+  }
+  .commentOption {
+    font-size: 20px;
+    position: relative;
+
+    padding: 15px;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+
+    .option {
+      height: 80px;
+      width: 100px;
+      border-radius: 10px;
+      background-color: #282828;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 100;
+      position: absolute;
+      bottom: -75px;
+      left: -2px;
+      font-size: 13px;
+      i {
+        font-size: 17px;
+        margin-left: 10px;
+      }
+      span {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+        margin-left: 10px;
+      }
+      .deleteBtn {
+        padding: 9px 0px;
+        width: 95%;
+        &:hover {
+          background-color: gray;
+        }
+      }
+      .editBtn {
+        padding: 9px 0px;
+        width: 95%;
+        &:hover {
+          background-color: gray;
+        }
+      }
+    }
+  }
+}
+.video__sideList {
+  display: flex;
+  flex-direction: column;
+
+  margin-left: 10px;
+}
 .hidden {
-  display: none;
+  opacity: 0;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+.loggedInBox {
+  position: absolute;
+  top: -9999px;
+  left: -99999px;
 }
