--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -29,7 +29,6 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: $bg;
   color: white;
-  padding-left: 20px;
 }
 @keyframes goAway {
   from {
@@ -43,22 +42,25 @@ body {
 }
 
 main {
-  max-width: 1200px;
+  max-width: 1300px;
   width: 100%;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 20px;
+  position: relative;
+  padding-left: 30px;
 }
-
 .message {
+  text-wrap: nowrap;
   position: absolute;
   top: 10px;
   left: 0;
   right: 0;
   margin: 0 auto;
-  max-width: 200px;
+  max-width: 270px;
   padding: 10px 20px;
   border-radius: 1000px;
   text-align: center;
+  z-index: 9999;
   animation: goAway 0.5s ease-in-out forwards;
   animation-delay: 4s;
   &.error {
