--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -11,6 +11,6 @@ block content
         input(name="name" type="text" placeholder="Name" required)
         input(type="submit" value="Join")
     include partials/social-login
-        div.auth-switch
+        //-div.auth-switch
             span Already have an account? 
-            a(href="/login") Log in now &rarr; 
+        a.link(href="/login") Already have an account?  &rarr; 
