--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,14 +1,11 @@
 extends base
 
-block content 
-    if errorMessage 
-        span=errorMessage
+block content
     form(method="POST")
         input(name="email" type="email" placeholder="Email" required) 
         input(name="password" type="password" placeholder="Password" required)
         input(type="submit" value="Login")
     include partials/social-login 
-        div.auth-switch
-            span Don't have an account? 
-            a(href="/join") Create one now &rarr;
+        //-div.auth-switch
+        a.link(href="/join") Don't have an account? &rarr;
      
