--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,8 +1,16 @@
 mixin video(video)
-    a(href=`/videos/${video.id}`).video-mixin
+    a(href=`/videos/${video._id}`).video-mixin
         div.video-mixin__thumb(style=`background-image:url(${"/"+video.thumbnailUrl});background-size:cover;background-position:center;`)
-        div.video-mixin__data
-            span.video-mixin__title=video.title
-            div.video-mixin__meta
-                span #{video.owner.name} • 
-                span #{video.meta.views} 회 
+        div.video-mixin__info
+            if url==="/"
+                if !video.owner.avatarUrl
+                    i.fa-solid.fa-face-smile
+                else
+                    img(src="/"+video.owner.avatarUrl).homeVideoAvatar 
+            div.video-mixin__data
+                span.video-mixin__title=video.title
+                div 
+                    span.video-mixin-name.grey #{video.owner.name}
+                div.video-mixin__meta
+                    span.grey #{video.meta.views} views • 
+                    span.grey #{video.formattedDate} 
