--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,26 +1,31 @@
 header
     a(href="/").header__logo
         i.fab.fa-youtube
+        span.headerTitle MyTube
     nav
         ul
             li
                 a(href="/search")
-                    i.fas.fa-search
+                    i.fas.fa-search.search-icon
+                        div.headerSearch__box.headerBox Search
             if loggedIn
                 li
-                    a(href="/videos/upload") Upload Video
-                li 
-                    a(href=`/users/edit`) Edit profile
+                    a(href="/videos/upload")
+                        i.fas.fa-video.video-icon
+                            div.headerVideo__box.headerBox Upload
                 li
-                    a(href="/users/logout") Log Out
+                    a(href="/users/logout")
+                        i.fas.fa-right-from-bracket.logOut-icon
+                            div.headerLogout__box.headerBox Log out
                 li
                     a(href=`/users/${loggedInUser._id}`)
                         if !loggedInUser.avatarUrl
                             i.fa-solid.fa-face-smile
                         else 
                             img(src="/"+loggedInUser.avatarUrl).header__avatar
-            else
+            else                        
                 li
-                    a(href="/login") Login                        
-                li
-                    a(href="/join").header__btn Join
+                    a(href="/login")
+                        div.headerLogin__btn 
+                            i.far.fa-circle-user
+                            span Sign in
