--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -316,7 +316,7 @@ input[type=submit]:disabled,
 }
 
 .fa-face-smile {
-  font-size: 40px;
+  font-size: 37px;
 }
 
 .comment__avatar {
@@ -359,7 +359,6 @@ input[type=submit]:disabled,
   height: 42px;
   width: 42px;
   border-radius: 50%;
-  margin-right: 10px;
 }
 
 .video-mixin {
@@ -381,6 +380,7 @@ input[type=submit]:disabled,
   flex-direction: column;
   align-items: flex-start;
   position: relative;
+  margin-left: 10px;
 }
 .video-mixin .video-mixin__data .video-mixin__title {
   font-size: 17px;
@@ -411,6 +411,7 @@ input[type=submit]:disabled,
   flex-direction: column;
   justify-content: center;
   padding-top: 3px;
+  margin-left: 10px;
 }
 .sideVideo-mixin .sideVideo-mixin__data .sideVideo-mixin__title {
   font-size: 15px;
