--- a/src/client/scss/components/video.scss
+++ b/src/client/scss/components/video.scss
@@ -2,7 +2,6 @@
   height: 42px;
   width: 42px;
   border-radius: 50%;
-  margin-right: 10px;
 }
 
 .video-mixin {
@@ -23,7 +22,7 @@
     flex-direction: column;
     align-items: flex-start;
     position: relative;
-
+    margin-left: 10px;
     .video-mixin__title {
       font-size: 17px;
       margin-bottom: 6px;
@@ -54,6 +53,7 @@
     flex-direction: column;
     justify-content: center;
     padding-top: 3px;
+    margin-left: 10px;
     .sideVideo-mixin__title {
       font-size: 15px;
       font-weight: 600;
