--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -6,7 +6,7 @@ block content
         if !user.avatarUrl
             i.fa-solid.fa-face-smile.avatar-icon
         else 
-            img(src="/" + user.avatarUrl).avatar
+            img(src=user.avatarUrl).avatar
         div.profile__info
             h3=user.name
             div.userInfo
