--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -29,7 +29,7 @@ block content
                             i.fa-solid.fa-face-smile.watch__avatar
                     else
                         a(href=`/users/${video.owner._id}`) 
-                            img(src="/"+video.owner.avatarUrl).ownerAvatar
+                            img(src=video.owner.avatarUrl).ownerAvatar
                     div.ownerInfo(data-id=video.owner._id)
                         a(href=`/users/${video.owner._id}`) 
                             span.ownerName=video.owner.name
@@ -64,7 +64,7 @@ block content
                     if !loggedInUser.avatarUrl
                         i.fa-solid.fa-face-smile.watch__avatar
                     else
-                        img(src="/"+loggedInUser.avatarUrl).comment__avatar
+                        img(src=loggedInUser.avatarUrl).comment__avatar
                     textarea(placeholder="Add comment...",rows="1")
                     button#addCommentBtn Comment
                 ul
@@ -75,7 +75,7 @@ block content
                                     i.fa-solid.fa-face-smile
                             else 
                                 a(href=`/users/${comment.owner}`)
-                                    img(src="/"+comment.avatarUrl).comment__avatar
+                                    img(src=comment.avatarUrl).comment__avatar
                             div.hidden.editModal
                                 form.editCommentForm
                                         textarea(rows="1").editCommentArea=comment.text
