--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -5,7 +5,7 @@ block content
     div.main__container
         div.main__box
             div#videoContainer(data-id=video._id)
-                video(src="/" + video.videoUrl)
+                video(src=video.videoUrl)
                 div#videoControls.videoControls
                     div.videoControls__play
                         span#play.videoControls__playBtn
