--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -5,7 +5,7 @@ block content
         if !loggedInUser.avatarUrl
             i.fa-solid.fa-face-smile.edit__avatar-icon
         else 
-            img(src=loggedInUser.avatarUrl).edit__avatar
+            img(src=`${isRender ? loggedInUser.avatarUrl : "/"+loggedInUser.avatarUrl}`).edit__avatar
     if errorMessage
         span=errorMessage
     form(method="POST" enctype="multipart/form-data").edit-profile__form
