--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,6 +1,6 @@
 mixin video(video)
     a(href=`/videos/${video._id}`).video-mixin
-        div.video-mixin__thumb(style=`background-image:url(${video.thumbnailUrl});background-size:cover;background-position:center;`)
+        div.video-mixin__thumb(style=`background-image:url(${isRender ? video.thumbnailUrl :"/"+ video.thumbnailUrl});background-size:cover;background-position:center;`)
         div.video-mixin__info
             if url==="/"
                 if !video.owner.avatarUrl
