--- a/src/client/scss/screens/watch.scss
+++ b/src/client/scss/screens/watch.scss
@@ -67,6 +67,28 @@
     }
     .subsBtn {
       background-color: #f1f1f1;
+      flex-direction: column;
+      position: relative;
+      &:hover {
+        .login-info {
+          opacity: 1;
+        }
+      }
+    }
+    .login-info {
+      height: 30px;
+      width: 110px;
+      border-radius: 15px;
+      background-color: tomato;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1;
+      position: absolute;
+      bottom: -35px;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
     }
     .subs {
       width: 120px;
@@ -87,6 +109,9 @@
       cursor: pointer;
       &:hover {
         background-color: gray;
+        .login-info {
+          opacity: 1;
+        }
       }
       #likeBtn {
         font-size: 17px;
@@ -293,7 +318,6 @@ i {
   .commentOption {
     font-size: 20px;
     position: relative;
-
     padding: 15px;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
