--- a/src/views/mixins/sideVideo.pug
+++ b/src/views/mixins/sideVideo.pug
@@ -1,6 +1,6 @@
 mixin video(video)
     a(href=`/videos/${video._id}`).sideVideo-mixin
-        div.sideVideo-mixin__thumb(style=`background-image:url(${"/"+video.thumbnailUrl});background-size:cover;background-position:center;`)
+        div.sideVideo-mixin__thumb(style=`background-image:url(${isRender ? video.thumbnailUrl :"/"+ video.thumbnailUrl});background-size:cover;background-position:center;`)
         div.sideVideo-mixin__data
             span.sideVideo-mixin__title=video.title
             span.sideVideo-mixin__name.grey #{video.owner.name}
